--- a/realEstateML.ipynb
+++ b/realEstateML.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "In this report, we will be using data collected from citydata.gov and applying machine learning techniques to determine the most optimal areas to invest in residential real estate. To start, we will import the dataset, remove columns right off the bat that likely do not have a correlation to housing prices and then remove all rows from the dataset that contain one or more NaN values."
+    "In this report, we will be using data collected from city-data.gov and applying machine learning techniques to determine the most optimal areas to invest in residential real estate. To start, we will import the dataset, remove columns right off the bat that likely do not have a correlation to housing prices and then remove all rows from the dataset that contain one or more NaN values."
    ]
   },
   {
